Stop Playing After Track: remember current track

BUG: 127312

svn path=/trunk/extragear/multimedia/amarok/; revision=544148